Fix Windows runtime packaging